# minionsos

./: .gitignore  .gitmodules  .mcp.json  AGENT.md  AGENTS.md  ARCHITECTURE_FINAL_REPORT.md  AUDIT_FINAL_REPORT.md  BOOK_SPLIT_PLAN.md  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  DAEMON_RUST_PLAN.md  ERRORS.md  LARGE_FILE_MODULARIZATION_SUMMARY.md  LARGE_FILE_OPTIMIZATION_FINAL.md  LARGE_FILE_REFACTOR_STRATEGY.md  MANUAL_AUTH_UPDATE_PLAN.md  MARKDOWN_INDEX.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_EXECUTION_SUMMARY.md  MODULE_PATH_INDEX.md  Makefile  README.md  README_AUDIT.md  README_FIX_PLAN.md  README_zh.md  RUST_CLI.md  RUST_IMPLEMENTATION.md  RUST_SUMMARY.md  STABILITY.md  SYSTEMATIC_REVIEW_COMPLETE.md  gru  install-rust-cli.sh  install.sh  noter  pyproject.toml  ruff.toml  test-rust-cli.sh  (+1 more)
.claude/: settings.json
.codex/: config.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-10T11-17-02-649Z.yml  page-2026-05-10T11-17-43-533Z.yml  page-2026-05-10T11-17-57-833Z.yml  page-2026-05-10T11-20-26-353Z.yml  page-2026-05-10T11-22-04-455Z.yml  page-2026-05-10T11-23-00-469Z.yml  page-2026-05-10T11-23-15-325Z.yml  page-2026-05-10T11-23-52-241Z.yml  page-2026-05-10T11-24-32-342Z.yml  page-2026-05-10T11-24-52-808Z.yml  page-2026-05-10T11-25-39-527Z.yml  page-2026-05-10T11-26-48-308Z.yml  page-2026-05-10T11-28-47-877Z.yml  page-2026-05-10T11-59-17-588Z.yml  page-2026-05-10T11-59-22-604Z.yml  page-2026-05-10T12-17-01-910Z.yml  page-2026-05-10T12-17-07-929Z.yml  page-2026-05-10T12-20-55-470Z.yml  page-2026-05-10T12-26-46-706Z.yml  page-2026-05-10T12-29-11-173Z.yml
EACN3/: .gitignore  LOCAL_DEV_SETUP.md  README.md  README_zh.md  index.html  pyproject.toml
EACN3/eacn/: __init__.py
EACN3/eacn/core/: exceptions.py
EACN3/eacn/core/models/: agent_card.py  task.py
EACN3/eacn/network/: adjudication.py  app.py  auth.py  logger.py  matcher.py
EACN3/eacn/network/api/: discovery_routes.py  routes.py  schemas.py
EACN3/eacn/network/cluster/: bootstrap.py  discovery.py  service.py
EACN3/eacn/network/db/: database.py
EACN3/eacn/network/discovery/: __init__.py  bootstrap.py  gossip.py
EACN3/plugin/: index.ts  openclaw.plugin.json  package.json  server.ts
EACN3/plugin/skills/eacn3-browse-zh/: SKILL.md
EACN3/plugin/skills/eacn3-dashboard/: SKILL.md
EACN3/plugin/skills/eacn3-dashboard-zh/: SKILL.md
EACN3/plugin/skills/eacn3-delegate/: SKILL.md
EACN3/plugin/skills/eacn3-delegate-zh/: SKILL.md
EACN3/plugin/skills/eacn3-execute/: SKILL.md
EACN3/plugin/skills/eacn3-invite/: SKILL.md
EACN3/plugin/skills/eacn3-invite-zh/: SKILL.md
EACN3/plugin/skills/eacn3-join-zh/: SKILL.md
EACN3/plugin/skills/eacn3-leave/: SKILL.md
EACN3/plugin/skills/eacn3-register/: SKILL.md
EACN3/plugin/skills/eacn3-task/: SKILL.md
EACN3/plugin/src/: a2a-server.ts  event-transport.ts  network-client.ts  reverse-control.ts
MANUAL/: 01-lifecycle.md  02-eacn3-comms.md  03-experiments.md  04-memory-draft.md  05-memory-book.md  06-memory-shelf-reel.md  07-publish-handoffs.md  08-paper-search.md  09-deliverables.md  10-visual-render.md  11-runtime-control.md  12-issues-debug.md  13-bridge.md  14-role-evolution.md  99-source-evidence.md  DECISION-MAP.md  INDEX.json  INDEX.md  MANUAL.md  PITFALLS.md  README.md  SCHEMA.md  TEST-RESULTS.md
MANUAL/domains/: bridge.md  debug.md  deliverables.md  eacn3.md  evolution.md  experiments.md  lifecycle.md  memory.md  papers.md  publish.md  reel-l0-memory.md  runtime.md  skills.md  subagent-handoff.md  visual.md
MANUAL/pitfalls/: pitfall-adjudicate-misuse.md  pitfall-deferred-schema.md  pitfall-empty-authz.md  pitfall-mcp-cosmetic.md  pitfall-opus-empty-input.md  pitfall-project-venv.md  pitfall-queue-deadlaunch-fp.md  pitfall-subagent-boilerplate.md  pitfall-tool-denied.md
MANUAL/scripts/: build_index.py  gen_eacn3_stubs.py  gen_tool_stubs.py  lookup.py  test-questions.yaml  validate.py  validate_mcp_operability.py  validate_skill_operability.py
MANUAL/tools/: eacn3_a2a_server.md  eacn3_await_events.md  eacn3_claim_agent.md  eacn3_close_task.md  eacn3_cluster_status.md  (+135 more)
answer/: answer1.md  answer10.md  answer11.md  answer12.md  answer13.md  answer14.md  answer15.md  answer16.md  answer17.md  answer2.md  answer3.md  answer4.md  answer5.md  answer6.md  answer7.md  answer8.md  answer9.md
dev-log/: 2026-05-MEMORY-V2.md  2026-05.md
docs/: README.md  eacn-online-wake-proposal.md  eacn-online-wake-v5-proposal.md  eacn-online-wake-v6-hooks-proposal.md  eacn-online-wake-v7-workspace-session-proposal.md  eacn3-integration-report.html  eacn3-mcp-tools-reference.html  memory-verified-claims.md  reel-l0-memory.md  runtime-feedback-proposal.md  session-report-2026-05-10.md
eacn-viz/: AGENTREAD.md  README.md  package.json  tailwind.config.js  vite.config.ts
examples/: CLAUDE.md
mcp-servers/: README.md  minionsos.md
mcp-servers/eacn3-rust/: Cargo.toml
mcp-servers/eacn3-rust/src/: error.rs  lib.rs  query.rs
mcp-servers/eacn3-rust/src/eacn3/: message.rs  mod.rs  task.rs
mcp-servers/eacn3-rust/src/memory/: draft.rs  mod.rs  reel.rs
mcp-servers/eacn3-rust/src/query/: mod_impl.rs
minions/: CLAUDE.md  __init__.py  cli.py  errors.py  identity.py  logging_setup.py  paths.py
minions-cli/: Cargo.toml
minions-cli/src/: main.rs
minions-core/: Cargo.toml
minions-core/src/: lib.rs  paths.rs  state.rs
minions-daemon/: Cargo.toml
minions-daemon/src/: config.rs  health.rs  main.rs
minions-tui/: .gitignore  Cargo.toml  DESIGN.md  README.md
minions-tui/src/: actions.rs  app.rs  config.rs  digest.rs  gru.rs  haiku.rs  logs.rs  main.rs  model.rs  scanner.rs  tmux.rs  ui.rs  vt.rs
minions-viz/: AGENTREAD.md  README.md  REDESIGN.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
minions-viz-v2/: package.json  tsconfig.server.json
outline/: CLAUDE.md  HUMANREADME.md  index.html  memory-benchmarks-research.md
skill-nodes/: README.md
tests/: conftest.py  git_mock.py  test_agent_host_gaps.py
workflow-plugins/: README.md
(+1197 files in other folders)
