[workspace]
members = [
    "minions-tui",
    "minions-cli",
    "minions-core",
    "minions-daemon",
    "mcp-servers/eacn3-rust",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
