[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minionsos"
version = "0.5.0"
description = "MinionsOS — Towards Fully Autonomous Scientific Discovery on the EACN Protocol."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "fastmcp>=0.2",
    "eacn3",
]

[project.scripts]
mos = "minions.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["minions"]

[tool.uv.sources]
eacn3 = { path = "./EACN3", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.34",
]
