[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minionsos"
version = "0.20.0"
description = "MinionsOS — Towards Fully Autonomous Scientific Discovery on the EACN Protocol."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "fastmcp>=0.2",
    "eacn3",
    "paper-search-mcp",
]

[project.optional-dependencies]
visual = [
    "opencv-python-headless>=4.10",
    "pdf2image>=1.17",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.scripts]
mos = "minions.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["minions"]

[tool.uv.sources]
eacn3 = { path = "./mcp-servers/eacn3", editable = true }
paper-search-mcp = { git = "https://github.com/openags/paper-search-mcp.git", rev = "d438222" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.6",
    "ruff>=0.15.11",
    "ty>=0.0.34",
]

[tool.pytest.ini_options]
# -n 4 is the thermal sweet spot on a fanless M-series MacBook Air: enough
# parallelism to cut wall time materially, conservative enough not to
# heat-soak the chassis. CI / machines with active cooling can override
# with ``pytest -n auto``; ``pytest -n 0`` disables xdist for debugging.
addopts = "-n 4"
testpaths = ["tests"]

[tool.ty.src]
# Exclude Writer skill reference scripts: these are templates shipped with the
# figure-chart-atlas / pdf-vector-layout / figure-aesthetic-exemplars skills,
# executed by Writer in its own (matplotlib / pikepdf / numpy / PIL) environment.
# They are not part of the MinionsOS runtime Python package, so their optional-dep
# imports are unresolvable from the dev environment. Excluding them from ty avoids
# spurious "unresolved-import" diagnostics without changing what the skills do.
exclude = [
    "minions/roles/writer/skills/figure-chart-atlas/references",
    "minions/roles/writer/skills/pdf-vector-layout/scripts",
    "minions/roles/writer/skills/figure-aesthetic-exemplars",
]
