[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eacn3"
version = "0.6.1"
description = "Emergent Agent Collaboration Network"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "websockets>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["eacn"]
