[package]
name = "minions-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Rust daemon for MinionsOS - Gru loop supervisor"
license = "MIT"

[[bin]]
name = "minionsd"
path = "src/main.rs"

[dependencies]
minions-core = { path = "../minions-core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
