[package]
name = "minions-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Keyboard-driven terminal control plane for MinionsOS"
license = "MIT"

[[bin]]
name = "mtui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
notify = "6"
vt100 = "0.15"
ureq = { version = "2", default-features = false, features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
