[package]
name = "eacn3-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Graph algorithms
petgraph = "0.6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP server (暂时注释，等待 Rust SDK 准备好)
# mcp-core = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }

[lib]
name = "eacn3_rust"
path = "src/lib.rs"

# Binaries (暂时注释，待实现)
# [[bin]]
# name = "eacn3-server"
# path = "src/bin/server.rs"
#
# [[bin]]
# name = "eacn3-query"
# path = "src/bin/query.rs"
